# iroh-chatbot

./: .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  ESLINT-SETUP.md  README-CHATBOT.md  TAILWIND-STYLE-GUIDE.md  app-snapshot.json  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
axum-app/: .env.example  API_DOCS.md  Cargo.toml  MCP_CONFIG.md  README.md  mcp.json  mcp.json.example
axum-app/src/: agent.rs  agent_api.rs  anthropic_service.rs  chat.rs  database.rs  gemini_service.rs  lib.rs  main.rs  openai_service.rs  styles.css
axum-app/src/mcp/: client.rs  config.rs  mod.rs  server.rs  tools.rs
axum-app/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openrouter.rs
src/: App.vue  main.ts  tauri-fetch.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: chat.ts
src/components/ai-elements/conversation/: Conversation.vue  ConversationContent.vue  ConversationEmptyState.vue  ConversationScrollButton.vue
src/components/ai-elements/message/: Message.vue  MessageAction.vue  MessageActions.vue  MessageAttachment.vue  MessageAttachments.vue  MessageAvatar.vue  MessageBranch.vue  MessageBranchContent.vue  MessageBranchNext.vue  MessageBranchPage.vue  MessageBranchPrevious.vue  MessageBranchSelector.vue  MessageContent.vue  MessageResponse.vue  MessageToolbar.vue  context.ts
src/components/ai-elements/prompt-input/: PromptInput.vue  PromptInputActionAddAttachments.vue  PromptInputActionMenu.vue  PromptInputActionMenuContent.vue  PromptInputActionMenuItem.vue  PromptInputActionMenuTrigger.vue  PromptInputAttachment.vue  PromptInputAttachments.vue  PromptInputBody.vue  PromptInputButton.vue  PromptInputCommand.vue  PromptInputCommandEmpty.vue  PromptInputCommandGroup.vue  PromptInputCommandInput.vue  PromptInputCommandItem.vue  PromptInputCommandList.vue  PromptInputCommandSeparator.vue  PromptInputFooter.vue  PromptInputHeader.vue  PromptInputHoverCard.vue  PromptInputHoverCardContent.vue  (+16 more)
(+94 files in other folders)
