[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-app"
path = "src/main.rs"

[lib]
name = "axum_app"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.125"
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
fastrand = "2.1.1"
anyhow = "1.0.89"
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
dotenvy = "0.15.7"
async-stream = "0.3.6"
# Gemini API dependencies
base64 = "0.22.1"
url = "2.5.7"

[dev-dependencies]
tower = "0.5.1"
axum-test = "16.0.0"
