[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-app"
path = "src/main.rs"

[lib]
name = "axum_app"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.125"
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }
fastrand = "2.1.1"
anyhow = "1.0.89"
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
dotenvy = "0.15.7"
async-stream = "0.3.6"
async-trait = "0.1.83"
# MCP (Model Context Protocol) dependencies
rmcp = { version = "0.8.5", features = [
    "client",
    "transport-sse-client",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "reqwest",
] }
# Gemini API dependencies
base64 = "0.22.1"
url = "2.5.7"
# Anthropic Claude API dependencies
sha2 = "0.10.8"
# Database dependencies
libsql = "0.9"
# Logging dependencies
tracing = "0.1"

[dev-dependencies]
tower = "0.5.1"
axum-test = "16.0.0"
tempfile = "3.8.1"
